k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colombia-departamentos-api
  namespace: devops-lab
  labels:
    app: colombia-departamentos-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: colombia-departamentos-api
  template:
    metadata:
      labels:
        app: colombia-departamentos-api
    spec:
      serviceAccountName: colombia-departamentos-api-sa
      containers:
        - name: colombia-departamentos-api
          image: ghcr.io/romergi1/colombia-departamentos-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"

          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 15

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 10001
            capabilities:
              drop:
                - ALL
