k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: colombia-departamentos-api
  namespace: devops-lab
  labels:
    app: colombia-departamentos-api
spec:
  type: NodePort
  selector:
    app: colombia-departamentos-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
      nodePort: 30080
